# pixel-app-store

./: .gitignore  .pio_verbose.txt  16m12m_littlefs_idf.csv  8m4m.csv  8m4m_littlefs_idf.csv  AGENTS.md  CMakeLists.txt  FONT_UPDATE.md  README.md  build.sh  device_ip.txt  merge_bin.sh  platformio.ini  rebuild.sh  release.sh  requests.sh  sdkconfig.defaults  sdkconfig.esp32-s3-n16r8  sdkconfig.hub75_idf  todolist.txt  update history.txt  upload.sh
.github/workflows/: publish-app-store.yml
.pio-core/: appstate.json
.pio-core/.cache/: telemetry.json
PIXEL_V1.0.19/: update history.txt
PIXEL_V1.0.8/: update history.txt
apps_src/: sports app icon.psd
apps_src/aqi_day_pulse/: main.lua  manifest.json  settings.html
apps_src/aqi_now/: main.lua  manifest.json  settings.html
apps_src/aquarium_scene/: main.lua  manifest.json
apps_src/arcade_clock/: manifest.json
apps_src/atelier_analog_clock/: main.lua  manifest.json
apps_src/aurora_scene/: manifest.json
artifacts/: atelier_analog_clock_local.ppm  atelier_analog_clock_refined.ppm  atelier_analog_clock_tuned.ppm  atelier_analog_clock_tuned_diff.ppm  frame_rect_analog_clock_local.ppm  global_news_ticker_capture.ppm
boards/: esp32-s3-devkitc-1-n16r8.json
components/hub75_dma/: CMakeLists.txt  Kconfig.projbuild
components/hub75_dma/src/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h
data_idf/: .pioignore
docs/: calendar_gateway_setup.md  calendar_onboarding.md  calendar_snapshot_api.md  ota_store_server.md
include/: my_debug.h
logs/: serial_60s.txt  serial_after_fix_30s.txt  serial_after_reflash_20s.txt  serial_crisp_15s.txt  serial_dilate_12s.txt  serial_fontswap2_18s.txt  serial_fontswap_15s.txt
pixel_v2_V2.0.8/: apps_included.txt
pixel_v2_V2.0.8_meta_check/: apps_included.txt
python/: calendar_local.template.json  calendar_snapshot.example.json  calendar_snapshot_gateway.py  calendar_tasks.template.json  coingecko_gateway.py  publish_store.py
scripts/: S1_debug_push.sh  S1_firmware_debug_ota.sh  S2_firmware_publish_beta.sh  S2_publish_beta.sh  S2_publish_beta_incremental.sh  S3_firmware_promote_beta_to_stable.sh  S3_promote_beta_to_stable.sh  S_channel.sh  audit_app_rules.py  build_package_install_run_app.sh  bump_all_app_versions.py  bump_patch_versions.py  capture_current_app_preview.py  dev_api_proxy.py  device_logs.sh  download_pixel_fonts.py  embed_web_asset.py  flash_littlefs_default.py  font_manager.html  font_preview_web.html  font_server.py  font_viewer.html  gen_lvgl_font_silkscreen_8.py  generate_settings_gz.py  generate_split_sports_apps.py  merge_16m_firmware.py  monitor_reset_then_monitor.py  ota_store_server.py  ota_update.py  package_selected_littlefs_16m.py  packaging_policy.py  pio_data_dir_idf.py  pio_embed_web_asset.py  prepare_default_installed_apps.py  preview_fonts_64x32.py  publish_app_store_all.sh  publish_apps.py  push_app.sh  render_atelier_analog_clock.py  render_digit_3d_lab.py  (+11 more)
src/: AnimatedGIFPanel_SPIFFS.ino.cpp.bak  CMakeLists.txt  main copy.cpp.backup  main.cpp  theme.cpp  theme.h
src/app/: app_update_server.cpp  app_update_server.h  buzzer.cpp  buzzer.h  captive_dns.c  captive_dns.h  display_control.cpp  display_control.h  hub75_config.cpp  hub75_config.h  lua_app_runtime.cpp  lua_app_runtime.h  raw_bench.cpp  raw_bench.h  user_button.cpp  user_button.h  wifi_manager.cpp  wifi_manager.h
src/app/album/: album.cpp  album.h
src/app/info/: ui_info.cpp
src/app/morphing-clock/: clock.cpp  common.h  config.h  digit.cpp  digit.h
src/app/stock/: stock.cpp  stock.h  ui_stock.cpp
src/app/tetris/: tetris_clock.cpp  tetris_clock.h  ui_tetris.cpp
src/app/weather/: ui_weather.cpp  weather_en.cpp  weather_en.h
src/font/: Conther_26pt7b.h  agencyb20pt7b.h  agencyb6pt7b.h  pixel6pt7b.h  pixel8pt7b.h
src/lib/: AsyncHTTPRequest_Debug_Generic.h  AsyncHTTPRequest_Generic.h  AsyncHTTPRequest_Generic.hpp  AsyncHTTPRequest_Impl_Generic.cpp  AsyncHTTPSRequest_Impl_Generic.h  async_http_server.cpp  async_http_server.h.esp32  btn.cpp  btn.h  display.cpp  display.h  gif.cpp  gif.h  settings.cpp  settings.h  times.cpp  times.h  web_server.h
src/lib/web/: css_cropper.min.h  css_style.h  html_diy.h  html_font.h  html_gif.h  html_image copy.h  html_image.h  html_index.h  html_index2.h  html_network.h  html_photo.h  html_system.h  html_ticker.h  html_time.h  html_tracker.h  html_weather.h  js_diy.h  js_jquery_min.h  js_network.h  js_photo.h  js_settings.h  js_system.h  js_time.h  js_weather.h
src/ui/: lv_font_pressstart2p_regular_8.c  lv_font_silkscreen_regular_8.c  lvgl_aapl_ticker.cpp  lvgl_aapl_ticker.h  lvgl_boot_wifi_screen.cpp  lvgl_boot_wifi_screen.h  lvgl_hub75_port.cpp  lvgl_hub75_port.h  lvgl_lua_app_carousel.cpp  lvgl_lua_app_carousel.h  lvgl_lua_app_screen.cpp  lvgl_lua_app_screen.h  lvgl_mem_utils.cpp  lvgl_mem_utils.h  lvgl_runtime_fonts.cpp  lvgl_runtime_fonts.h  lvgl_screen_carousel.cpp  lvgl_screen_carousel.h  lvgl_smoke_test.cpp  lvgl_smoke_test.h  lvgl_stock_carousel.cpp  lvgl_stock_carousel.h  lvgl_stock_screen.cpp  lvgl_stock_screen.h  lvgl_stock_screen2.cpp  lvgl_stock_screen2.h  lvgl_stock_screen3.cpp  lvgl_stock_screen3.h  lvgl_stock_screen4.cpp  lvgl_stock_screen4.h  lvgl_stock_screen5.cpp  lvgl_stock_screen5.h  lvgl_stock_screen6.cpp  lvgl_stock_screen6.h  lvgl_stock_screen7.cpp  lvgl_stock_screen7.h  lvgl_ttf_test_screen.cpp  lvgl_ttf_test_screen.h
src/ui/fonts/: lv_font_digits_thin_8.c  lv_font_digits_thin_8.h  lv_font_time_big_10.c  lv_font_time_big_10.h
src_old/: 1_SimpleTestShapes.ino.cpp.bak  2_PatternPlasma.ino.bak  main.cpp
tools/: ota_update.py  release_upload_server.py
tools/lvgl_simulator/: CMakeLists.txt  README.md  lv_conf.h
tools/lvgl_simulator/build_local/: CMakeCache.txt  Makefile  cmake_install.cmake
tools/lvgl_simulator/build_local/lvgl/: Makefile  cmake_install.cmake
tools/lvgl_simulator/include/: esp_err.h  esp_heap_caps.h  esp_log.h
tools/lvgl_simulator/include/freertos/: FreeRTOS.h
tools/lvgl_simulator/src/: main.cpp  sim_stubs.cpp
webpages/: f.html  portal.html  settings_core.js
(+542 files in other folders)
